add get user for filter
