# src/routes/admin.router.js
@@ -1,21 +1,26 @@
 const express = require('express');
 const router = express.Router();
-const { signup, login, logout, refreshAccessToken,forgetPassword, deleteAdmin, updateAdminName, updateAdminRole, getAllAdmins, updateAdminStatus, resetPassword } = require('../controllers/admin.controller');
-const { verifyToken, isAdminOrSupervisor, isActive} = require('../middleware/Authentication');
+const { signup, login,getAllAdminsForFilter, logout, refreshAccessToken,forgetPassword, deleteAdmin, updateAdminName, updateAdminRole, getAllAdmins, updateAdminStatus, resetPassword } = require('../controllers/admin.controller');
+const { verifyToken, isAdminOrSupervisor,isSupervisor, isActive} = require('../middleware/Authentication');
 const upload = require('../middleware/uploadFile');
-// Auth routes
-router.post('/signup',isAdminOrSupervisor,upload.single("profile"), signup);
+
+router.post('/signup', isAdminOrSupervisor, upload.single("profile"), signup);
 router.post('/login', login);
-router.post('/logout', verifyToken, logout);
 router.post('/refresh-token', refreshAccessToken);
 router.patch('/forget-password', forgetPassword);
 
-// Admin management routes
-router.get('/all', verifyToken, isSupervisor, getAllAdmins);
-router.delete('/:id', verifyToken, isSupervisor, deleteAdmin);
-router.patch('/:id/name', verifyToken, updateAdminName);
-router.patch('/:id/role', verifyToken, isSupervisor, updateAdminRole);
-router.patch('/:id/status', verifyToken, isSupervisor, updateAdminStatus);
-router.patch('/reset-password', verifyToken, resetPassword);
+router.use(verifyToken, isActive);
+router.get('/getAllUserForFilter', getAllAdminsForFilter);
+router.patch('/:id/name', updateAdminName);
+router.patch('/reset-password', resetPassword);
+router.post('/logout', logout);
+
+router.use(isSupervisor);
+router.get('/all', getAllAdmins);
+router.delete('/:id', deleteAdmin);
+router.patch('/:id/role', updateAdminRole);
+router.patch('/:id/status', updateAdminStatus);
+
+
 
 module.exports = router;
